--- a/manage/form.html
+++ b/manage/form.html
@@ -197,7 +197,7 @@
                     <div class="input-wrapper">
                         <input type="text" class="formbold-form-input w-300" id="product-id-input"
                             placeholder="Enter item id you will edit">
-                        <button id="sub-btn" type="button" class="available-height h-auto" onclick="searchProduct()">
+                        <button id="sub-btn" type="button" onclick="searchProduct()">
                             <div id="sub-txt-edit">
                                 <i class="bi bi-search"></i>
                             </div>
@@ -350,7 +350,7 @@
                     <div class="input-wrapper">
                         <input type="text" class="formbold-form-input w-300" id="product-id-input-del"
                             placeholder="Enter item id you will delete">
-                        <button id="sub-btn-del" type="button" class="available-height" onclick="searchProductdel()">
+                        <button id="sub-btn-del" type="button" onclick="searchProductdel()">
                             <div id="sub-txt-del">
                                 <i class="bi bi-search"></i>
                             </div>
