--- a/Cart.html
+++ b/Cart.html
@@ -459,7 +459,7 @@
                                     placeholder="optional.." class="input-cart">
                             </div>
                             <div class="fit-content m-5">
-                                <h5 class="h5-form">City</h5>
+                                <h5 class="h5-form">Government</h5>
                                 <select id="city" name="city" required="" class="input-cart select-city">
                                     <option value="">Select a Government</option>
                                     <option value="Cairo">Cairo</option>
@@ -621,7 +621,7 @@
                                 <div class="flex center">
                                     <span class="small-txt m-5 txt-center line-height-15">The shipping cost will be 100
                                         EGP - if your
-                                        Government is not Cairo</span>
+                                        Government is not Al-Sharqia</span>
                                 </div>
                                 <div class="flex center">
                                     <span class="small-txt m-5 txt-center line-height-15 flex">- Free shipping on orders
