--- a/Cart.html
+++ b/Cart.html
@@ -465,7 +465,7 @@
                                     <option value="Cairo">Cairo</option>
                                     <option value="Giza">Giza</option>
                                     <option value="Alexandria">Alexandria</option>
-                                    <option value="Al Sharqia">Al-Sharqia</option>
+                                    <option value="Al-Sharqia">Al-Sharqia</option>
                                     <option value="Other">Other</option>
                                 </select>
                             </div>
