--- a/Contact.html
+++ b/Contact.html
@@ -328,6 +328,7 @@
     });
 
 </script>
+<script src="./assets/js/update-cart-amont.js"></script>
 <script src="./assets/js/store-contact.js"></script>
 <script src="./assets/js/route.js"></script>
 <script src="./assets/js/report.js"></script>
