--- a/manage/orders.html
+++ b/manage/orders.html
@@ -44,7 +44,8 @@
     <main>
         <div class="formbold-form-wrapper">
             <div class="mb-20 flex align-items space-between">
-                <div class="profile-icon profile-icon-img" onclick="toggleDropdown()">
+                 <div class="profile-icon" onclick="toggleDropdown()">
+                     <img src="./icon.png" alt="Icon" class="profile-icon-img">
                     <!-- <span><i class="bi bi-diagram-3"></i></span> -->
                     <div id="dropdown" class="dropdown-menu">
                         <a href="./main.html" class="center align-items"><i class="bi bi-house-door mr-5"></i> Home
