--- a/manage/orders.html
+++ b/manage/orders.html
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="input-wrapper ">
-                    <input type="text" class="formbold-form-input w-300 h-44" id="product-id-input-del"
+                    <input type="text" class="formbold-form-input w-300" id="product-id-input-del"
                         placeholder="Search among orders">
                     <button id="sub-btn-del" type="button" class="h-44" onclick="">
                         <div id="sub-txt-del">
